src/objects/Business_Location__c.object
<CustomObject>
    <description>Holds Business Location (BLOM) information. Maintained via MD integration. Read-only in Salesforce. Child objects will store processes, products, relationships and attributes.</description>
    <fields>
        <fullName>Address_ID__c</fullName>
        <label>Address ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Valid_From__c</fullName>
        <label>Address Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agent_Responsible_Email__c</fullName>
        <description>This field is used to match to an existing Contact by a trigger. The trigger will query for the Contact having the matching email and populate the Agent Responsible lookup field.</description>
        <label>Agent Responsible Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Responsible_Name__c</fullName>
        <description>The agent responsible (ombudsansvarig) name that will be used if multiple matches exist on the agent responsible email when looking for a contact.</description>
        <label>Agent Responsible Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Locations</relationshipLabel>
        <relationshipName>Business_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Name_Nickname__c</fullName>
        <label>Alternative Name (Nickname)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLOM_ID__c</fullName>
        <externalId>true</externalId>
        <label>BLOM ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Location_Type_ID__c</fullName>
        <label>Business Location Type ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location_Type_Short__c</fullName>
        <label>Business Location Type Short</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location_Type__c</fullName>
        <label>Business Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Afhentningssted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Døgnposten lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erhvervsindlevering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postbutik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frimærke Forhandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posthus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributionscenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakkecenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributionsservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrativ Lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postselv lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kørselsafdeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decentral boksanläg lokation ?? DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postboks Anlæg lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postkasse lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depot lokation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>decentral budstue, DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevterminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODR terminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevbärarkontor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postboxanläggning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Företagscenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frimärksombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevlåde ställe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buntställe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coestablishments__c</fullName>
        <description>All the coestablishments, will be in a comma separated row.</description>
        <label>Coestablishments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtyard_Name__c</fullName>
        <label>Courtyard Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtyard_Number__c</fullName>
        <label>Courtyard Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks__c</fullName>
        <label>Desks</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entrance_Name__c</fullName>
        <label>Entrance Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entrance_Number__c</fullName>
        <label>Entrance Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Coordinates__c</fullName>
        <label>GPS Coordinates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Letter__c</fullName>
        <label>House Letter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrical_Number__c</fullName>
        <label>Metrical Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cash_Counting_Machines__c</fullName>
        <label>Number of Cash Counting Machines</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cash_Registers__c</fullName>
        <label>Number of Cash Registers</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Companies_within_Territory__c</fullName>
        <label>Number of Companies within Territory</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Desks__c</fullName>
        <label>Number of Desks</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Households_within_Territory__c</fullName>
        <label>Number of Households within Territory</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_LBB_Households__c</fullName>
        <label>Number of LBB Households</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Number_Stands__c</fullName>
        <label>Number of Number Stands</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Poster_Frames__c</fullName>
        <label>Number of Poster Frames</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Ticket_Printing_Machines__c</fullName>
        <label>Number of Ticket Printing Machines</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Business_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent Business Location that may hold a group of BLOMs.</description>
        <label>Parent Business Location</label>
        <referenceTo>Business_Location__c</referenceTo>
        <relationshipLabel>Child Business Locations</relationshipLabel>
        <relationshipName>Child_Business_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Agent_Type__c</fullName>
        <label>Retail Agent Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Chain_Name__c</fullName>
        <label>Retail Chain Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Chain_Profile_Name__c</fullName>
        <label>Retail Chain Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Number__c</fullName>
        <label>Room Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSID__c</fullName>
        <label>SSID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <label>Site Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type_of_Retail_Location__c</fullName>
        <label>Type of Retail Location</label>
        <picklist>
            <picklistValues>
                <fullName>Postombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frimärksombud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posthus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postbutikk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forhandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grossist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Village_Name__c</fullName>
        <label>Village Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village_Number__c</fullName>
        <label>Village Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Business Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_ID__c</columns>
        <columns>Address_Valid_From__c</columns>
        <columns>BLOM_ID__c</columns>
        <columns>Business_Location_Type__c</columns>
        <columns>Country_Code__c</columns>
        <columns>PO_Box__c</columns>
        <columns>Street_Name__c</columns>
        <columns>Street_Number__c</columns>
        <columns>Telephone__c</columns>
        <columns>Valid_From__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>